--- a/src/pages/NewsPage/style.css
+++ b/src/pages/NewsPage/style.css
@@ -11,3 +11,15 @@
     font-size: 20px;
 }
 
+.btn-news {
+    margin-left: 1100px;
+    height: 50px;
+    width: 120px;
+    font-size: 17px;
+    cursor: pointer;
+    border: none;
+    background: #1E90FF;
+    color: white;
+    border-radius: 3px;
+}
+
