--- a/src/pages/NewsItem/style.css
+++ b/src/pages/NewsItem/style.css
@@ -37,3 +37,16 @@
    font-weight: bold;
 }
 
+.back {
+    position: absolute;
+    left: 1100px;
+    top: 140px;
+    padding: 10px;
+    font-size: 20px;
+    background: #1E90FF;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer; 
+}
+
